tests/baselines/reference/parserPropertySignature5(strict=true).errors.txt
parserPropertySignature5.ts(2,3): error TS7008: Member '"E"' implicitly has an 'any' type.


==== parserPropertySignature5.ts (1 errors) ====
    interface I {
      "E";
      ~~~
!!! error TS7008: Member '"E"' implicitly has an 'any' type.
    }